--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,8 @@ vignettes/*.pdf
 # pkgdown site
 docs/
 
-/traviz-shiny/rsconnect/
+# rsconnect
+rsconnect/*
+rsconnect/
+/rsconnect/
+/rsconnect/*
